--- a/pkg/cplayer/style.css
+++ b/pkg/cplayer/style.css
@@ -3,6 +3,7 @@
     --normal-text: #000000;
     --chat-name: rgba(17, 17, 17, 0.6);
     --chat-time: rgba(17, 17, 17, 0.4);
+    --yt-live-chat-sponsor-color: #107516
 }
 
 @media (prefers-color-scheme: dark) {
@@ -12,6 +13,7 @@
         --normal-text: rgb(241, 241, 241);
         --chat-name: rgba(255, 255, 255, 0.7);
         --chat-time: rgba(255, 255, 255, 0.54);
+        --yt-live-chat-sponsor-color: #2ba640
     }
 }
 
@@ -79,6 +81,15 @@ img.emoji {
     font-size: 0.9em;
     vertical-align: baseline;
     cursor: pointer;
+}
+div.live-chat-item .c_name.member {
+    color: var(--yt-live-chat-sponsor-color);
+}
+div.live-chat-item .c_badges.member {
+    padding-right: 4px;
+}
+div.live-chat-item .c_badges.member img {
+    width: 1rem;
 }
 .c_name { color: var(--chat-name); }
 .t_title { padding-left: 0.5rem; }
