--- a/pkg/cplayer/style.css
+++ b/pkg/cplayer/style.css
@@ -37,7 +37,11 @@ div #live-chat {
     padding-left: 10px;
     border: 3px solid var(--chat-time);
     border-radius: 5px;
-
+}
+div #timestamp,#option {
+    display: inline-block;
+    vertical-align: top;
+    padding-left: 2em;
 }
 div.live-chat-item {
     margin-bottom: 0.5rem;
